syntax = "proto3";

option java_multiple_files = true;
package org.entur.jwt.spring.grpc.test;

message GreetingRequest {
}

message GreetingResponse {
    sint64 status = 1; 
    string message = 2;
}
